--- a/catalog.html
+++ b/catalog.html
@@ -113,7 +113,7 @@
                                 <div class="table-cell btn-reserve"><a href="#">Забронировать</a></div>
                             </div>
                         </div>
-                    </div>
+                    </div class="info">
                     <div class="rating">
                         <!--4 звездочки -->
                         <p class="stars">&#9733; &#9733; &#9733; &#9733;</p>
@@ -122,7 +122,7 @@
                 </li>
                 <li class="catalog-item">
                     <img src="img/hotel2.png" width="135" height="90" alt="гостиница Desert Quail Inn">
-                    <div>
+                    <div class="info">
                         <h3>Desert Quail Inn</h3>
                         <div class="table">
                             <div class="table-row">
@@ -143,7 +143,7 @@
                 </li>
                 <li class="catalog-item">
                     <img src="img/hotel3.png" width="135" height="90" alt="гостиница Villas at Poco Diablo">
-                    <div>
+                    <div class="info">
                         <h3>Villas at Poco Diablo</h3>
                         <div class="table">
                             <div class="table-row">
