--- a/catalog.html
+++ b/catalog.html
@@ -72,29 +72,39 @@
         </section>
         <section>
             <ul class="list-filters">
-                <li>
+                <li class="discovered">
                     <a href="#">
                         <h3>Найдено: 3</h3>
                     </a>
                 </li>
-                <li>
+                <li class="sorted-item">
                     <a href="#">
                         <p>Сортировка:</p>
                     </a>
                 </li>
-                <li>
+                <li class="by-price">
                     <a href="#">
                         <p>По цене</p>
                     </a>
                 </li>
-                <li>
+                <li class="by-type">
                     <a href="#">
                         <p>По типу</p>
                     </a>
                 </li>
-                <li>
+                <li class="by-rating">
                     <a href="#">
                         <p>По рейтингу</p>
+                    </a>
+                </li>
+                <li class="sorted-down">
+                    <a href="#">
+                        <p>▼</p>
+                    </a>
+                </li>
+                <li class="sorted-up">
+                    <a href="#">
+                        <p>▲</p>
                     </a>
                 </li>
             </ul>
@@ -167,11 +177,9 @@
     </main>
     <footer class="main-footer">
         <div class="container">
-            <div>
-                <p class="footer-contacts a">
-                    <a href="#">#visitSEDONA</a>
-                    <a href="#">+7 800 555-86-28</a>
-                </p>
+            <div class="footer-contacts a">
+                <p><a href="#">#visitSEDONA</a></p>
+                <p><a href="#">+7 800 555-86-28</a></p>
             </div>
             <ul class="footer-social">
                 <li class="social-button a">
@@ -190,11 +198,13 @@
                     </a>
                 </li>
             </ul>
-            <p class="footer-copyright">WEBSITE BY
-                <a href="https://htmlacademy.ru/intensive/htmlcss">
-                    <img src="img/logo_html.svg" width="104" height="36" alt="лого HTML-academy">
-                </a>
-            </p>
+            <div class="footer-copyright">
+                <p class="copyright">WEBSITE BY
+                    <a href="https://htmlacademy.ru/intensive/htmlcss">
+                        <img src="img/logo_html.svg" width="104" height="36" alt="лого HTML-academy">
+                    </a>
+                </p>
+            </div>
         </div>
     </footer>
 </body>
