--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="icon" href="favicon.ico">
     <link rel="icon" href="img/favicons/favicon.svg" type="image/svg+xml">
     <title>Седона — небольшой городок в Аризоне,заслуживающий большего!</title>
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=PT+Sans:400,700&amp;subset=latin,cyrillic;display=swap">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=PT+Sans:400,700&amp;subset=latin,cyrillic">
     <link href="https://necolas.github.io/normalize.css/latest/normalize.css" rel="stylesheet">
     <link href="css/styles.css" rel="stylesheet">
 </head>
@@ -143,11 +143,9 @@
     <!-- Main footer -->
     <footer class="page-footer main-footer">
         <div class="container">
-            <div>
-                <p class="footer-contacts a">
-                    <a href="#">#visitSEDONA</a>
-                    <a href="#">+7 800 555-86-28</a>
-                </p>
+            <div class="footer-contacts a">
+                <p><a href="#">#visitSEDONA</a></p>
+                <p><a href="#">+7 800 555-86-28</a></p>
             </div>
             <ul class="footer-social">
                 <li class="social-button a">
@@ -166,11 +164,13 @@
                     </a>
                 </li>
             </ul>
-            <p class="footer-copyright">WEBSITE BY
-                <a href="https://htmlacademy.ru/intensive/htmlcss">
-                    <img src="img/logo_html.svg" width="104" height="36" alt="лого HTML-academy">
-                </a>
-            </p>
+            <div class="footer-copyright">
+                <p class="copyright">WEBSITE BY
+                    <a href="https://htmlacademy.ru/intensive/htmlcss">
+                        <img src="img/logo_html.svg" width="104" height="36" alt="лого HTML-academy">
+                    </a>
+                </p>
+            </div>
         </div>
     </footer>
 </body>
