Декоративные элементы на главной странице

--- a/catalog_over.html
+++ b/catalog_over.html
@@ -198,6 +198,132 @@
                         <p>Рейтинг: 9,2</p>
                     </div>
                 </li>
+                <li class="catalog-item">
+                    <img src="img/hotel1.png" width="135" height="90" alt="гостиница Amara Resort & Spa">
+                    <div class="info">
+                        <h3>Amara Resort & Spa</h3>
+                        <div class="table">
+                            <div class="table-row">
+                                <div class="table-cell">Гостиница</div>
+                                <div class="table-cell">от 4000 <span>&#8381;</span></div>
+                            </div>
+                            <div class="table-row">
+                                <div class="table-cell btn-detailed"><a href="#">Подробнее</a></div>
+                                <div class="table-cell btn-reserve"><a href="#">Забронировать</a></div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="rating">
+                        <!--4 звездочки -->
+                        <p class="stars">&#9733; &#9733; &#9733; &#9733;</p>
+                        <p>Рейтинг: 8,5</p>
+                    </div>
+                </li>
+                <li class="catalog-item">
+                    <img src="img/hotel2.png" width="135" height="90" alt="гостиница Desert Quail Inn">
+                    <div class="info">
+                        <h3>Desert Quail Inn</h3>
+                        <div class="table">
+                            <div class="table-row">
+                                <div class="table-cell">Гостиница</div>
+                                <div class="table-cell">от 3000 <span>&#8381;</span></div>
+                            </div>
+                            <div class="table-row">
+                                <div class="table-cell btn-detailed"><a href="#">Подробнее</a></div>
+                                <div class="table-cell btn-reserve"><a href="#">Забронировать</a></div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="rating">
+                        <!--3 звездочки -->
+                        <p class="stars">&#9733; &#9733; &#9733;</p>
+                        <p>Рейтинг: 8,9</p>
+                    </div>
+                </li>
+                <li class="catalog-item">
+                    <img src="img/hotel3.png" width="135" height="90" alt="гостиница Villas at Poco Diablo">
+                    <div class="info">
+                        <h3>Villas at Poco Diablo</h3>
+                        <div class="table">
+                            <div class="table-row">
+                                <div class="table-cell">Гостиница</div>
+                                <div class="table-cell">от 2000 <span>&#8381;</span></div>
+                            </div>
+                            <div class="table-row">
+                                <div class="table-cell btn-detailed"><a href="#">Подробнее</a></div>
+                                <div class="table-cell btn-reserve"><a href="#">Забронировать</a></div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="rating">
+                        <!--2 звездочки -->
+                        <p class="stars">&#9733; &#9733;</p>
+                        <p>Рейтинг: 9,2</p>
+                    </div>
+                </li>
+                <li class="catalog-item">
+                    <img src="img/hotel1.png" width="135" height="90" alt="гостиница Amara Resort & Spa">
+                    <div class="info">
+                        <h3>Amara Resort & Spa</h3>
+                        <div class="table">
+                            <div class="table-row">
+                                <div class="table-cell">Гостиница</div>
+                                <div class="table-cell">от 4000 <span>&#8381;</span></div>
+                            </div>
+                            <div class="table-row">
+                                <div class="table-cell btn-detailed"><a href="#">Подробнее</a></div>
+                                <div class="table-cell btn-reserve"><a href="#">Забронировать</a></div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="rating">
+                        <!--4 звездочки -->
+                        <p class="stars">&#9733; &#9733; &#9733; &#9733;</p>
+                        <p>Рейтинг: 8,5</p>
+                    </div>
+                </li>
+                <li class="catalog-item">
+                    <img src="img/hotel2.png" width="135" height="90" alt="гостиница Desert Quail Inn">
+                    <div class="info">
+                        <h3>Desert Quail Inn</h3>
+                        <div class="table">
+                            <div class="table-row">
+                                <div class="table-cell">Гостиница</div>
+                                <div class="table-cell">от 3000 <span>&#8381;</span></div>
+                            </div>
+                            <div class="table-row">
+                                <div class="table-cell btn-detailed"><a href="#">Подробнее</a></div>
+                                <div class="table-cell btn-reserve"><a href="#">Забронировать</a></div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="rating">
+                        <!--3 звездочки -->
+                        <p class="stars">&#9733; &#9733; &#9733;</p>
+                        <p>Рейтинг: 8,9</p>
+                    </div>
+                </li>
+                <li class="catalog-item">
+                    <img src="img/hotel3.png" width="135" height="90" alt="гостиница Villas at Poco Diablo">
+                    <div class="info">
+                        <h3>Villas at Poco Diablo</h3>
+                        <div class="table">
+                            <div class="table-row">
+                                <div class="table-cell">Гостиница</div>
+                                <div class="table-cell">от 2000 <span>&#8381;</span></div>
+                            </div>
+                            <div class="table-row">
+                                <div class="table-cell btn-detailed"><a href="#">Подробнее</a></div>
+                                <div class="table-cell btn-reserve"><a href="#">Забронировать</a></div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="rating">
+                        <!--2 звездочки -->
+                        <p class="stars">&#9733; &#9733;</p>
+                        <p>Рейтинг: 9,2</p>
+                    </div>
+                </li>
             </ul>
         </section>
     </main>
