--- a/catalog.html
+++ b/catalog.html
@@ -40,28 +40,27 @@
                         <!--<label for="id-pool" name="pool">-->
                         <!--<input type="checkbox" class="checkbox-pool-btn" id="id-pool" name="pool" value="value-pool" checked>-->
                         <!--Бассейн</label>-->
-                        <input type="checkbox" class="checkbox-pool-btn" id="id-pool" name="pool" value="value-pool" checked>
+                        <!--  Бассейн  -->
+                        <input type="checkbox" class="checkbox-button" id="id-pool" name="pool" value="value-pool" checked>
                         <label for="id-pool" name="pool">Бассейн</label>
-                        <!--  -----------  -->
-                        <label for="id-park" name="id-park_lbl">
-                            <input type="checkbox" id="id-park" value="value-parking" checked>
-                        Парковка</label>
-                        <!--  -----------  -->
-                        <label for="id-wifi">
-                            <input type="checkbox" id="id-wifi" value="value-wifi">
-                        Wi-Fi</label>
+                        <!--  Парковка  -->
+                        <input type="checkbox" class="checkbox-button" id="id-park" name="park" value="value-parking">
+                        <label for="id-park" name="park">Парковка</label>
+                        <!--  Wi-Fi  -->
+                        <input type="checkbox" class="checkbox-button" id="id-wi-fi" name="wi-fi" value="value-wi-fi">
+                        <label for="id-wi-fi" name="wi-fi">Wi-Fi</label>
                     </div>
                     <div class="inner-container checkbox-position">
                         <h4>Тип жилья:</h4>
-                        <label for="id-hotel">
-                            <input type="checkbox" id="id-hotel" value="value-hotel" checked>
-                        Гостиница</label>
-                        <label for="id-motel">
-                            <input type="checkbox" id="id-motel" value="value-motel" checked>
-                        Мотель</label>
-                        <label for="id-apart">
-                            <input type="checkbox" id="id-apart" value="value-apart" checked>
-                        Апартаменты</label>
+                        <!--  Гостиница  -->
+                        <input type="checkbox" class="checkbox-button" id="id-hotel" name="hotel" value="value-hotel" checked>
+                        <label for="id-hotel" name="hotel">Гостиница</label>
+                        <!--  Мотель  -->
+                        <input type="checkbox" class="checkbox-button" id="id-motel" name="motel" value="value-motel" checked>
+                        <label for="id-motel" name="motel">Мотель</label>
+                        <!--  Апартаменты  -->
+                        <input type="checkbox" class="checkbox-button" id="id-apart" name="apart" value="value-apart" checked>
+                        <label for="id-apart" name="apart">Апартаменты</label>
                     </div>
                     <div class="inner-container">
                         <!--  ползунки  -->
